@@ -128,3 +128,16 @@ def generate_contents(file, contents_function="auto", verbose=False):
 			"Error generating contents, is appropriate utility (%s) installed on your system?" \
 			% (contents_function, )
 
+def countdown(secs=5, doing="Starting"):
+	if secs:
+		print ">>> Waiting " + secs + " seconds before starting..."
+		print ">>> (Control-C to abort)..."
+		print doing + " in: ",
+		ticks = range(secs)
+		ticks.reverse()
+		for sec in ticks:
+			sys.stdout.write(str(sec+1) + " ")
+			sys.stdout.flush()
+			time.sleep(1)
+		print
+
